Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
-body, html {
+body,
+html {
     height: 100%;
     margin: 0;
-    background-color: #FFA30E; 
+    background-color: #FFA30E;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -10,7 +11,7 @@ body, html {
 }
 
 .terminalcard {
-    background-color:#1E1F1D;
+    background-color: #1E1F1D;
     width: auto;
     height: auto;
     margin: 20px auto;
@@ -18,18 +19,26 @@ body, html {
     border-radius: 10px;
     min-width: 700px;
     padding-bottom: 10px;
+    max-width: 75%;
 }
 
-.title-bar{
+.title-bar {
     background-color: #3B3939;
     padding: 5px 10px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    position:relative;
+    position: relative;
     box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.1);
 }
 
-.title-bar div{
+.title-bar span {
+    margin: 0 auto;
+    display: inline;
+    text-align: center;
+}
+
+
+.title-bar div {
     display: inline-block;
     height: 12px;
     width: 12px;
@@ -37,7 +46,7 @@ body, html {
     margin-right: 5px;
 }
 
-.terminalcontent{
+.terminalcontent {
     padding: 20px;
     background-color: #1E1E1E;
     justify-content: space-between;
@@ -45,20 +54,22 @@ body, html {
 
 .red {
     background-color: #FB5E57;
-    box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.6);
 }
 
 .yellow {
     background-color: #FEBC2E;
-    box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.6);
 }
 
 .green {
     background-color: #28C83F;
-    box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.6);
 }
 
-.red:hover, .yellow:hover, .green:hover{
+.red:hover,
+.yellow:hover,
+.green:hover {
     opacity: .5;
 }
 
@@ -69,7 +80,7 @@ body, html {
     height: 1em;
     background: white;
     margin-left: 10px;
-    animation: blink-animation 1.25s steps(5,start) infinite;
+    animation: blink-animation 1.25s steps(5, start) infinite;
 }
 
 @keyframes blink-animation {
@@ -83,7 +94,8 @@ pre {
     font-family: monospace;
     white-space: pre;
     margin: 1em 0;
-  }
+    justify-content: left;
+}
 
 a:link {
     color: white;
@@ -91,20 +103,21 @@ a:link {
     font-size: 14px;
 }
 
-a:visited{
-    color:white;
+a:visited {
+    color: white;
 }
 
-a:hover{
+a:hover {
     color: grey;
 }
 
-.resources{
-    line-height: 1.4;
+.resources {
     font: 'Monaco';
+    flex-direction: column;
+    gap: 1px;
 }
 
-.prompt{
-    display:inline;
-    color:#FFA30E;
+.prompt {
+    display: inline;
+    color: #FFA30E;
 }
